--- a/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -1,5 +1,6 @@
 {% load molly_utils %}
 {% if entity.metadata.real_time_information %}
+<div id="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">
     {% if entity.metadata.real_time_information.pip_info %}
     <ul class="content-list no-round-bottom">
         <li>{% for info in entity.metadata.real_time_information.pip_info %}
@@ -40,5 +41,5 @@
   </div>
  </div>
   {% endif %}
-
+</div>
 {% endif %}
