Move page-specific code out of site-wide JavaScript

--- a/molly/apps/places/templates/places/category_detail.html
+++ b/molly/apps/places/templates/places/category_detail.html
@@ -1,6 +1,38 @@
 {% extends "places/base.html" %}
 {% load molly_utils %}
-{% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
+{% block extrahead %}
+  {% include "geolocation/js.html" %}
+  <script type="text/javascript">
+    $(function(){
+      $('li.next a').click(function(){
+          $.ajax({
+              url: $(this).attr('href'),
+              data: { format: 'json' },
+              dataType: 'json',
+              success: function(data){
+                  $('.current-page').html(data.entities.number)
+                  
+                  if (data.entities.has_next) {
+                      $('li.next a').attr('href', '?page=' + (data.entities.number + 1).toString(10))
+                  } else {
+                      $('li.next').remove()
+                  }
+                  for (i in data.entities.objects) {
+                      item = data.entities.objects[i]
+                      $('#category-list').append('<li><a href="' + item._url + '">' +
+                                                  item.title + 
+                                                  '</a></li>')
+                      if (i == 0) {
+                          $('#category-list li:last').addClass('page-break')
+                      }
+                  }
+              }
+          })
+          return false;
+      })
+    })
+  </script>
+{% endblock extrahead %}
 {% block pagetitle %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
 {% block title %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
 
