--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -1,6 +1,32 @@
 {% extends "places/base.html" %}{% load molly_utils %}{% load molly_search %}
 
-{% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
+{% block extrahead %}
+    {% include "geolocation/js.html" %}
+    
+    <script type="text/javascript">	
+	$(function(){
+	    $('.nearby a').click(function(){
+		$.ajax({
+		    url: $(this).attr('href'),
+		    data: { format: 'json' },
+		    dataType: 'json',
+		    success: function(data){parse_results(data, true)}
+		})
+		return false;
+	    })
+	    
+	    $('.categories a').click(function(){
+		$.ajax({
+		    url: $(this).attr('href'),
+		    data: { format: 'json' },
+		    dataType: 'json',
+		    success: function(data){parse_results(data, false)}
+		})
+		return false;
+	    })
+	})
+    </script>
+{% endblock extrahead %}
 
 {% block content %}
 
