--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -13,126 +13,137 @@
 
 {% if device|device_has_parent:"apple_generic" or browser.svgt_1_1 %}
 <ul id="transport-links">
-	{% if park_and_rides %}
-	<li class="transport-link">
-		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
-	{% endif %}
-	{% if nearby.bus %}
-	<li class="transport-link">
-		<a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
-	{% endif %}
-	{% if train_station %}
-	<li class="transport-link">
-		<a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
-	{% endif %}
-	{% if travel_alerts %}
-	<li class="transport-link">
-		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
-	{% endif %}
+    {% if park_and_rides %}
+    <li class="transport-link">
+        <a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
+    {% endif %}
+    {% if nearby.bus %}
+    <li class="transport-link">
+        <a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
+    {% endif %}
+    {% if train_station %}
+    <li class="transport-link">
+        <a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
+    {% endif %}
+    {% if travel_alerts %}
+    <li class="transport-link">
+        <a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
+    {% endif %}
 </ul>
 {% else %}
 <ul id="transport-links">
-	{% if park_and_rides %}
-	<li class="transport-link">
-		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.png" alt="Park and Rides" width="48" height="48" /></a></li>
-	{% endif %}
-	{% if nearby.bus %}
-	<li class="transport-link">
-		<a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.png" alt="Bus Stops" width="48" height="48" /></a></li>
+    {% if park_and_rides %}
+    <li class="transport-link">
+        <a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.png" alt="Park and Rides" width="48" height="48" /></a></li>
     {% endif %}
-	{% if train_station %}
-	<li class="transport-link">
-		<a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.png" alt="Train Departure Boards" width="48" height="48" /></a></li>
-	{% endif %}
-	{% if travel_alerts %}
-	<li class="transport-link">
-		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.png" alt="Travel News" width="48" height="48" /></a></li>
+    {% if nearby.bus %}
+    <li class="transport-link">
+        <a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.png" alt="Bus Stops" width="48" height="48" /></a></li>
+    {% endif %}
+    {% if train_station %}
+    <li class="transport-link">
+        <a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.png" alt="Train Departure Boards" width="48" height="48" /></a></li>
+    {% endif %}
+    {% if travel_alerts %}
+    <li class="transport-link">
+        <a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.png" alt="Travel News" width="48" height="48" /></a></li>
     {% endif %}
 </ul>
 {% endif %}
 
 {% if park_and_rides %}
 <div class="section" id="park_and_rides">
-  <div class="header">
-    <h2><a href="{% url places:nearby-detail "park-and-ride" %}" style="color:inherit;">Park and Rides</a></h2>
-  </div>
-  <div class="section-content" style="color:#000;">
-    {% for entity in park_and_rides %}
-    <div style="width: 50%;{% if not forloop.last or forloop.counter|divisibleby:2 %} float: left;{% endif %} margin: 3px auto 3px auto;{% if not forloop.counter|divisibleby:2 %} clear: left;{% endif %}">
-      <h3><a href="{{ entity.get_absolute_url}}" style="color:#000;">{% ifequal entity.title|slice:"-13:" "Park and Ride" %}{{ entity.title|slice:":-14" }}{% else %}{% ifequal entity.title|slice:"-11:" "Park & Ride" %}{{ entity.title|slice:":-12" }}{% else %}{{ entity.title }}{% endifequal %}{% endifequal %}</a></h3>
-      {% if entity.metadata.park_and_ride %}
-	{% if not entity.metadata.park_and_ride.unavailable %}
-	<div style="width:90%;border: 1px solid #7c7c7c;height: 7px; background-color:#39d93c;margin: 5px auto;">
-	  <div style="width: {{ entity.metadata.park_and_ride.percentage }}%; height:7px;background-color: #960300;">&nbsp;</div>
-	</div>
-	<p style="text-align:center;">Spaces: {{ entity.metadata.park_and_ride.spaces }} / {{ entity.metadata.park_and_ride.capacity }}</p>
-	{% else %}
-	<p style="text-align:center;"><em>Space information currently unavailable</em></p>
-	<p style="text-align:center;">Spaces: ? / {{ entity.metadata.park_and_ride.capacity }}</p>
-	{% endif %}
-      {% endif %}
+    <div class="header">
+        <h2><a href="{% url places:nearby-detail "park-and-ride" %}">Park and Rides</a></h2>
     </div>
-    {% endfor %}
-  </div>
+    <div class="section-content">
+        {% for entity in park_and_rides %}
+            <div class="park-and-ride" style="{% if not forloop.last or forloop.counter|divisibleby:2 %} float: left;{% endif %}{% if not forloop.counter|divisibleby:2 %} clear: left;{% endif %}">
+                <h3><a href="{{ entity.get_absolute_url}}">
+                    {% ifequal entity.title|slice:"-13:" "Park and Ride" %}
+                        {{ entity.title|slice:":-14" }}
+                    {% else %}
+                        {% ifequal entity.title|slice:"-11:" "Park & Ride" %}
+                            {{ entity.title|slice:":-12" }}
+                        {% else %}
+                            {{ entity.title }}
+                        {% endifequal %}
+                    {% endifequal %}</a></h3>
+                {% if entity.metadata.park_and_ride %}
+                    {% if not entity.metadata.park_and_ride.unavailable %}
+                        <div class="capacity-bar">
+                            <div style="width: {{ entity.metadata.park_and_ride.percentage }}%; height:7px;background-color: #960300;">&nbsp;</div>
+                        </div>
+                        <p>Spaces: {{ entity.metadata.park_and_ride.spaces }} / {{ entity.metadata.park_and_ride.capacity }}</p>
+                    {% else %}
+                        <p><em>Space information currently unavailable</em></p>
+                        <p>Spaces: ? / {{ entity.metadata.park_and_ride.capacity }}</p>
+                    {% endif %}
+                {% endif %}
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endif %}
 
 {% for type, data in nearby.items %}
 <div class="section" id="{{ type }}">
-  <div class="header">
-    <h2>{{ data.results_type }} {{ data.type.verbose_name_plural }} - {% now "G:i:s "%}</h2>
-  </div>
-  {% ifnotequal data.results_type "Favourite" %}
-	<div class="section-content no-round-bottom">{% include "geolocation/update_location_embed.html" %}</div>
-  {% endifnotequal %}
-  <table class="content">
-    <tbody>
-
-{% for entity in data.entities %}
-	<tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% if entity.distance %} <small>(about {{ entity.distance.m|round_up_10 }}m {{ entity.bearing }})</small>{% endif %}</a></th></tr>
-	{% if entity.metadata.real_time_information.pip_info %}
-	  <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
-	{% endif %}
-	{% if entity.metadata.real_time_information.services %}
-		{% for service in entity.metadata.real_time_information.services %}
-		  <tr>
-			<td style="text-align: center;"><big>{{ service.service }}</big></td>
-			<td>{{ service.destination }}</td>
-			<td>{{ service.next }}{% if service.following %}<small>, {{ service.following.0 }}{% if service.following.1 %}, &hellip;{% endif %}</small>{% endif %}</td>
-		  </tr>
-		{% endfor %}
-	{% else %}
-	    {% if not entity.metadata.real_time_information.pip_info %}
-	      <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
-	    {% endif %}
-	{% endif %}
-{% endfor %}
-	  </tbody>
-	</table>
-  {% ifequal data.results_type "Favourite" %}
-  <ul class="link-list">
-    <li><a href="{% url places:nearby-detail data.type.slug %}">View nearby {{ data.type.verbose_name_plural }}</a></li>
-  </ul>
-  {% endifequal %}
+    <div class="header">
+        <h2>{{ data.results_type }} {{ data.type.verbose_name_plural }} - {% now "G:i:s "%}</h2>
+    </div>
+    {% ifnotequal data.results_type "Favourite" %}
+        <div class="section-content no-round-bottom">{% include "geolocation/update_location_embed.html" %}</div>
+    {% endifnotequal %}
+    <table class="content">
+        <tbody>
+        {% for entity in data.entities %}
+            <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">
+                    {{ entity.title }}
+                    {% if entity.distance %} <small>(about {{ entity.distance.m|round_up_10 }}m {{ entity.bearing }})</small>{% endif %}
+                </a></th></tr>
+            {% if entity.metadata.real_time_information.pip_info %}
+                <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
+            {% endif %}
+            {% if entity.metadata.real_time_information.services %}
+                {% for service in entity.metadata.real_time_information.services %}
+                    <tr>
+                        <td style="text-align: center;"><big>{{ service.service }}</big></td>
+                        <td>{{ service.destination }}</td>
+                        <td>{{ service.next }}{% if service.following %}<small>, {{ service.following.0 }}{% if service.following.1 %}, &hellip;{% endif %}</small>{% endif %}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                {% if not entity.metadata.real_time_information.pip_info %}
+                    <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+        </tbody>
+    </table>
+    {% ifequal data.results_type "Favourite" %}
+    <ul class="link-list">
+        <li><a href="{% url places:nearby-detail data.type.slug %}">View nearby {{ data.type.verbose_name_plural }}</a></li>
+    </ul>
+    {% endifequal %}
 </div>
 {% endfor %}
 
 {% if train_station %}
-{% include "places/metadata/ldb.html" %}
+    {% include "places/metadata/ldb.html" %}
 {% endif %}
 
 {% if travel_alerts %}
 
 <div class="section" id="travel_news">
-  <div class="header">
-    <h2>Travel alerts</h2>
-  </div>
+    <div class="header">
+        <h2>Travel alerts</h2>
+    </div>
   
-  <ul class="content-list">
-{% for alert in travel_alerts %}
-    <li><a href="{{ alert.get_absolute_url }}" style="color: inherit;">{{ alert.title }}</a></li>
-{% endfor %}
-  </ul>
+    <ul class="content-list">
+    {% for alert in travel_alerts %}
+        <li><a href="{{ alert.get_absolute_url }}" style="color: inherit;">{{ alert.title }}</a></li>
+    {% endfor %}
+    </ul>
 </div>
 
 {% endif %}
