--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -9,6 +9,7 @@
             }
             refreshTimer()
             $(document).bind('molly-location-update', ajaxTransportUpdate)
+            setupLDBButtons();
         })
     </script>
 {% endblock %}
