--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -54,16 +54,21 @@ ul li.transport-link a img { border: 0; }
 
 {% block content %}
 
+
 {% if device|device_has_parent:"apple_generic" or browser.svgt_1_1 %}
 <ul id="transport-links">
 	<li class="transport-link">
 		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
 	<li class="transport-link">
 		<a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
+	{% if train_station %}
 	<li class="transport-link">
 		<a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
+	{% endif %}
+	{% if travel_alerts %}
 	<li class="transport-link">
 		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
+	{% endif %}
 </ul>
 {% else %}
 <ul id="transport-links">
@@ -71,10 +76,14 @@ ul li.transport-link a img { border: 0; }
 		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.png" alt="Park and Rides" width="48" height="48" /></a></li>
 	<li class="transport-link">
 		<a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.png" alt="Bus Stops" width="48" height="48" /></a></li>
+	{% if train_station %}
 	<li class="transport-link">
 		<a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.png" alt="Train Departure Boards" width="48" height="48" /></a></li>
+	{% endif %}
+	{% if travel_alerts %}
 	<li class="transport-link">
 		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.png" alt="Travel News" width="48" height="48" /></a></li>
+    {% endif %}
 </ul>
 {% endif %}
 
