--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -75,6 +75,7 @@ li#menu-library {background-image:url('../../site/images/index-icons/library.png
 li#menu-weather {background-image:url('../../site/images/index-icons/weather.png');}
 li#menu-weblearn {background-image:url('../../site/images/index-icons/weblearn.png');}
 li#menu-service_status {background-image:url('../../site/images/index-icons/service_status.png');}
+li#menu-service-status {background-image:url('../../site/images/index-icons/service_status.png');}
 li#menu-transport {background-image:url('../../site/images/index-icons/transport.png');}
 /* End Index Page Specific */
 
@@ -143,6 +144,7 @@ div#bc-title h1.news-header {      background-image:url('../../site/images/index
 div#bc-title h1.events-header {      background-image:url('../../site/images/index-icons/events-bc.png');}
 div#bc-title h1.weather-header {  background-image:url('../../site/images/index-icons/weather-bc.png');}
 div#bc-title h1.service_status-header {  background-image:url('../../site/images/index-icons/service_status-bc.png');}
+div#bc-title h1.service-status-header {  background-image:url('../../site/images/index-icons/service_status-bc.png');}
 div#bc-title h1.weblearn-header {  background-image:url('../../site/images/index-icons/weblearn-bc.png');}
 div#bc-title h1.feature_vote-header {  background-image:url('../../site/images/index-icons/feature_vote-bc.png');}
 div#bc-title h1.auth-header {  background-image:url('../../site/images/index-icons/auth-bc.png');}
