--- a/molly/media/site/css/svg.css
+++ b/molly/media/site/css/svg.css
@@ -9,4 +9,5 @@ li#menu-library {background-image:url('../../site/images/index-icons/library.svg
 li#menu-weather {background-image:url('../../site/images/index-icons/weather.svg');}
 li#menu-weblearn {background-image:url('../../site/images/index-icons/weblearn.svg');}
 li#menu-service_status {background-image:url('../../site/images/index-icons/service-status.svg');}
+li#menu-service-status {background-image:url('../../site/images/index-icons/service-status.svg');}
 li#menu-transport {background-image:url('../../site/images/index-icons/transport.svg');}
