--- a/molly/apps/transport/static/transport/css/smart.css
+++ b/molly/apps/transport/static/transport/css/smart.css
@@ -44,3 +44,73 @@ ul li.transport-link a img { border: 0; }
 #travel_news .header h2 {
     background-image: url('../../transport/images/warn-small.png');
 }
+
+.line-name {
+    font-weight: bold;
+}
+
+.tube-1 .line-name {
+    /* Bakerloo */
+    background: #ae6118;
+    color: #fff;
+}
+
+.tube-2 .line-name {
+    /* Central */
+    background: #e41f1f;
+    color: #fff;
+}
+
+.tube-7 .line-name {
+    /* Circle */
+    background: #f8d42d;
+    color: #113c92;
+}
+
+.tube-9 .line-name {
+    /* District */
+    background: #00a575;
+    color: #fff;
+}
+
+.tube-8 .line-name {
+    /* Hammersmith and City */
+    color: #113b92;
+    background: #e899a8;
+}
+
+.tube-4 .line-name {
+    /* Jubilee */
+    background: #8f989e;
+    color:#fff;
+}
+
+.tube-11 .line-name {
+    /* Metropolitan */
+    background: #113b92;
+    color: #fff;
+}
+
+.tube-5 .line-name {
+    /* Northern */
+    background: #000;
+    color: #fff;
+}
+
+.tube-6 .line-name {
+    /* Piccadilly */
+    background: #0450a1;
+    color: #fff;
+}
+
+.tube-3 .line-name {
+    /* Victoria */
+    background: #009fe0;
+    color: #fff;
+}
+
+.tube-12 .line-name {
+    /* Waterloo and City */
+    background: #70c3ce;
+    color: #113b92;
+}
