--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -46,6 +46,10 @@
 </ul>
 {% endif %}
 
+{% if transit_status %}
+    {% include "places/metadata/transit_status.html" %}
+{% endif %}
+
 {% if park_and_rides %}
 <div class="section" id="park_and_rides">
   <div class="header">
