Show additional information for an entity/page alongside title on favourites - fixes MOX-109

--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -85,7 +85,8 @@
       </div>
       <ul class="link-list">
       {% for favourite in favourites %}
-	<li><a href="{{ favourite.url }}">{{ favourite.metadata.title }}</a></li>
+	<li class="favourite-link"><a href="{{ favourite.url }}">{{ favourite.metadata.title|safe }}
+          {% if favourite.metadata.additional %}<br /><span class="additional">{{ favourite.metadata.additional|safe }}</span>{% endif %}</a></li>
       {% endfor %}
 	<li><a href="{% url favourites:index %}"><strong>Manage Favourites</strong></a></li>
       </ul>
