--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -988,3 +988,17 @@ small {
 {
     border: 1px solid #000000;
 }
+
+#loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #ccc;
+    background-image: url('../../site/images/loading.gif');
+    background-position: center center;
+    background-repeat: no-repeat;
+    opacity: 0.75;
+    z-index: 100;
+}
