--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -2,33 +2,7 @@
 
 {% block extrahead %}
   {% if entity.metadata.meta_refresh %}
-    {% if use_javascript %}
-      {% include "geolocation/js.html" %}
-      <script type="text/javascript">
-        var refreshFrequency = {{ entity.metadata.meta_refresh }};
-	setTimeout(function(){
-	    $.ajax({
-		url: window.location.href,
-		data: { format: 'json' },
-		dataType: 'json',
-		success: refreshRTI
-	    })
-	}, refreshFrequency * 1000)
-	
-	$(function(){
-	    $('.nearby a').click(function(){
-		$.ajax({
-		    url: $(this).attr('href'),
-		    data: { format: 'json' },
-		    dataType: 'json',
-		    success: function(data){parse_results(data, true)}
-		})
-		return false;
-	    })
-	    setupLDBButtons();
-	})
-      </script>
-    {% else %}
+    {% if not use_javascript %}
       <meta http-equiv="refresh" content="{{ entity.metadata.meta_refresh }}" />
     {% endif %}
   {% endif %}
