--- a/molly/apps/places/templates/places/nearby_detail.html
+++ b/molly/apps/places/templates/places/nearby_detail.html
@@ -1,8 +1,7 @@
 {% extends "places/base.html" %}{% load molly_maps %}{% load molly_utils %}
 
 {% block extrahead %}{{ block.super }}{% if entity %}
-<meta name="robots" content="noindex" />{% endif %}
-{% include "geolocation/js.html" %}{% endblock %}
+<meta name="robots" content="noindex" />{% endif %}{% endblock %}
 
 {% block content %}
 
