--- a/molly/geolocation/templates/geolocation/js.html
+++ b/molly/geolocation/templates/geolocation/js.html
@@ -1,7 +1,7 @@
 {% load compressed %}{% if use_javascript %}
     <script type="text/javascript">
         var locationRequired = {{ require_location|yesno:"true,false" }};
-        var base = "{% url home:index %}";
+        var base = window.location.protocol + '//' + window.location.host + "{% url home:index %}";
         var locationName = {% if geolocation.name %}"{{ geolocation.name|escapejs }}"{% else %}null{% endif %};
         var autoLocationUpdating = {% ifequal geolocation.method "html5" %}true{% else %}false{% endifequal %};
         var csrfToken = "{% csrf_token %}";
