Early work on Sakai announcements

--- a/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/apps/sakai/templates/sakai/index.html
@@ -6,12 +6,15 @@
 <div class="section">
   <div class="header">
     <h2>WebLearn</h2>
+  </div>
+  <div class="section-content">
     {% if user_details.firstName %}
         <p>Hello {{ user_details.firstName }}; welcome to mobile WebLearn!</p>
     {% endif %}
     <p>
       In our WebLearn Mobile preview, you can book events that are
-      available through your WebLearn Sign-up tool.
+      available through your WebLearn Sign-up tool, participate in polls and
+      fill in surveys.
     </p>
     <p>
       You'll see this section expand and improve over time and we would really
@@ -19,10 +22,33 @@
       bottom of the page.
     </p>
   </div>
-<ul class="link-list">
-{% for tool in tools %}
-  <li><a href="{{ tool.url }}">{{ tool.title }}</a></li>
-{% endfor %}
-</ul>
+</div>
+<div class="section">
+  <div class="header">
+    <h2>Announcements</h2>
+    {% if not user_details.firstName %}
+      <p>You are currently not logged in to WebLearn, therefore we can't show
+         you your personal announcements, only global ones. Log in by clicking
+         on a tool below to see all your current announcements.</p>
+    {% endif %}
+  </div>
+  <ul class="link-list">
+    {% for announcement in announcements.announcement_collection %}
+      <li><a href="{% url sakai:announcement announcement.id %}">{{ announcement.title|safe }}</a></li>
+    {% empty %}
+      <li>No announcements right now</li>
+    {% endfor %}
+  </ul>
+</div>
+
+<div class="section">
+  <div class="header">
+    <h2>Tools</h2>
+  </div>
+  <ul class="link-list">
+  {% for tool in tools %}
+    <li><a href="{{ tool.url }}">{{ tool.title }}</a></li>
+  {% endfor %}
+  </ul>
 </div>
 {% endblock %} 
