--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -2,7 +2,7 @@
 
 <div class="section" id="ldb">
   <div class="header">
-    <h2>{{ train_station.title }} ({% if board %}{{ board }}{% else %}departures{% endif %}) - {{ train_station.metadata.ldb.generatedAt|date:"H:i:s" }}</h2>
+    <h2>{{ train_station.title }} ({% if board %}{{ board }}{% else %}departures{% endif %}) - {{ train_station.metadata.ldb.generatedAt|localize_utc|date:"H:i:s" }}</h2>
   </div>
   
   {% if train_station.metadata.ldb.nrccMessages.message %}
