--- a/molly/apps/contact/templates/contact/result.html
+++ b/molly/apps/contact/templates/contact/result.html
@@ -26,7 +26,7 @@
   {% endfor %}
   {% for telephoneNumber in person.telephoneNumber %}
     <p>
-      {{ telephoneNumber|telephone }}}</a>
+      {{ telephoneNumber|telephone }}</a>
     </p>
   {% endfor %}
 </div>
