Change wording on Sakai page

--- a/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/apps/sakai/templates/sakai/index.html
@@ -33,8 +33,7 @@
     <h2>Announcements</h2>
     {% if not user_details.firstName %}
       <p>You are currently not logged in to WebLearn, therefore we can't show
-         you your personal announcements, only global ones. Log in by clicking
-         on a tool below to see all your current announcements.</p>
+         you your personal announcements, only global ones.</p>
     {% endif %}
   </div>
   <ul class="link-list">
