--- a/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/apps/sakai/templates/sakai/index.html
@@ -1,40 +1,28 @@
 {% extends "sakai/base.html" %}
 
-{% block pagetitle %}Weblearn{% endblock %}
-
 {% block content %}
 <div class="section">
   <div class="header">
-    <h2>WebLearn</h2>
+    <h2>WebLearn Preview</h2>
   </div>
-  <div class="section-content{% if not user_details.firstName %} no-round-bottom{% endif %}">
-    {% if user_details.firstName %}
-        <p>Hello {{ user_details.firstName }}; welcome to mobile WebLearn!</p>
-    {% endif %}
-    <p>
-      In our WebLearn Mobile preview, you can book events that are
-      available through your WebLearn Sign-up tool, participate in polls and
-      fill in surveys.
-    </p>
+  <div class="section-content">
+    <p>Hello{% if user_details.firstName %} {{ user_details.firstName }}{% endif %}, welcome to mobile WebLearn preview!</p>
     <p>
       You'll see this section expand and improve over time and we would really
       like to hear what you think, so do drop us a note via the link at the
       bottom of the page.
     </p>
   </div>
-  {% if not user_details.firstName %}
-  <ul class="link-list">
-    <li><a href="{% url sakai:index %}?force_login">Log in to WebLearn</a></li>
-  </ul>
-  {% endif %}
+
 </div>
 <div class="section">
   <div class="header">
-    <h2>Announcements</h2>
-    {% if not user_details.firstName %}
-      <p>You are currently not logged in to WebLearn, therefore we can't show
-         you your personal announcements, only global ones.</p>
-    {% endif %}
+    <h2>Announcements
+	{% if not user_details.firstName %}
+		- <a href="{% url sakai:index %}?force_login">log in for more</a> 
+	{% endif %}
+	</h2>
+    
   </div>
   <ul class="link-list">
     {% for announcement in announcements.announcement_collection %}
