Added sharing links to URL shortener

--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -13,6 +13,16 @@
     <img class="qr-code" src="http://chart.apis.google.com/chart?cht=qr&amp;chs=200x200&amp;chld=L|1&amp;chl={{ url|urlencode }}" style="width:100%; max-width:200px" />
   </p>
 
+<!-- Facebook, Twitter, and Email sharing -->
+
+<p>Share on <a href="http://www.facebook.com/share.php?u={{ url }}">Facebook</a></p>
+
+<p>Share on <a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on Mobile Oxford{% endif %} {{ url }}">Twitter</a></p>
+
+<p>Share by <a href="mailto:?subject={% if page_title %}{{ page_title }} From Mobile Oxford{% endif %}&body={% if page_title %}{{ page_title }} From Mobile Oxford{% endif %} {{ url }}">Email</a></p>
+
+<!-- end sharing -->
+
   <p>You may wish to <a href="{{ path }}">go back whence you came</a>.</p>
 
 {% if use_javascript %}
