--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -15,11 +15,11 @@
 
 <!-- Facebook, Twitter, and Email sharing -->
 
-<p>Share on <a href="http://www.facebook.com/share.php?u={{ url }}">Facebook</a></p>
-
-<p>Share on <a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on Mobile Oxford{% endif %} {{ url }}">Twitter</a></p>
-
-<p>Share by <a href="mailto:?subject={% if page_title %}{{ page_title }} From Mobile Oxford{% endif %}&body={% if page_title %}{{ page_title }} From Mobile Oxford{% endif %} {{ url }}">Email</a></p>
+<ul id="transport-links">
+<li class="transport-link"><a href="http://www.facebook.com/share.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook.png" border="0"/></a></li>
+<li class="transport-link"><a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/twitter.png" border="0"/></a></li>
+<li class="transport-link"><a href="mailto:?subject={% if page_title %}{{ page_title }} From site_name{% endif %}&body={% if page_title %}{{ page_title }} From site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/email.png" border="0"/></a></li>
+</ul>
 
 <!-- end sharing -->
 
