--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -2,6 +2,32 @@
 
 {% block content %}
 
+<style type="text/css">
+ul#transport-links{
+	list-style: none;
+	margin: 5px 0 0 0;
+	padding: 5px;
+	text-align:center;
+}
+
+ul li.transport-link {
+	margin: 0 5px;
+	display: inline-block;
+	background-color: #002B4C;
+	background: -webkit-gradient(linear, left top, left bottom,
+	      from(rgb(105,153,195)), color-stop(0.5, rgb(3,59,113)), to(rgb(27,87,144)));
+	background: -moz-linear-gradient(top, rgb(105,153,195), rgb(3,59,113), rgb(27,87,144));
+	border-radius: 8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; 
+	
+	box-shadow: 3px 3px 3px #333;
+	-webkit-box-shadow: 3px 3px 3px #333;
+	-moz-box-shadow: 3px 3px 3px #333;
+}
+
+ul li.transport-link a img { border: 0; }
+</style>
+
+
 <div class="bubble pad-10">
   <p>The shortened URL for the page{% if page_title %} <strong>{{ page_title }}</strong>{% endif %}  is:</p>
 
