Tweaks to social sharing icons

--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -39,7 +39,7 @@ ul li.transport-link a img { border: 0; }
     <img class="qr-code" src="http://chart.apis.google.com/chart?cht=qr&amp;chs=200x200&amp;chld=L|1&amp;chl={{ url|urlencode }}" style="width:100%; max-width:200px" />
   </p>
 
-<!-- Facebook, Twitter, and Email sharing -->
+<!-- Facebook, Twitter, and Email sharing  icons-->
 
 <ul id="transport-links">
 <li class="transport-link"><a href="http://www.facebook.com/share.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook.png" border="0"/></a></li>
