Larger icons for social sharing

--- a/molly/url_shortener/templates/url_shortener/index.html
+++ b/molly/url_shortener/templates/url_shortener/index.html
@@ -32,9 +32,9 @@ ul li.transport-link a img { border: 0; }
 <!-- Facebook, Twitter, and Email sharing icons-->
 
 <ul id="transport-links">
-<li class="transport-link"><a href="http://www.facebook.com/share.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook.png" border="0"/></a></li>
-<li class="transport-link"><a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/twitter.png" border="0"/></a></li>
-<li class="transport-link"><a href="mailto:?subject={% if page_title %}{{ page_title }} From site_name{% endif %}&body={% if page_title %}{{ page_title }} From site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/email.png" border="0"/></a></li>
+<li class="transport-link"><a href="http://www.facebook.com/share.php?u={{ url }}"><img src="{{ STATIC_URL }}site/images/icons/facebook2.png" border="0"/></a></li>
+<li class="transport-link"><a href="http://twitter.com/home?status={% if page_title %}{{ page_title }} on site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/twitter2.png" border="0"/></a></li>
+<li class="transport-link"><a href="mailto:?subject={% if page_title %}{{ page_title }} From site_name{% endif %}&body={% if page_title %}{{ page_title }} From site_name{% endif %} {{ url }}"><img src="{{ STATIC_URL }}site/images/icons/email2.png" border="0"/></a></li>
 </ul>
 
 <!-- end sharing -->
