Re-enable 'web-app-capable'

--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -12,6 +12,7 @@
 {% endif %}
 
 {% if device|device_has_parent:"apple_generic" or device.device_os == "Android" %}
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="{{ STATIC_URL }}site/images/apple-touch-icon.png"/>
     <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}site/images/apple-touch-icon-72px.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}site/images/apple-touch-icon-114px.png"/>
