--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -6,11 +6,10 @@
 <div class="section">
   <div class="header">
     <h2>{{ category.name }}</h2>
-    Show
-    <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a>
-    <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a>
+    Show:
+    <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a> 
+    <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a> 
     <a href="{% url podcasts:category category.slug %}">all</a>
-    podcasts.
   </div>
 		
 <ul class="link-list">
