--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -2,7 +2,7 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-            <li><a href="{% url podcasts_index %}">
+            <li><a href="{% url podcasts:index %}">
                 <img src="{{ STATIC_URL }}images/index-icons/podcasts-bc.png" alt="Podcasts"/>
             </a></li>
 {% if podcast.category %}
