--- a/molly/apps/feeds/templates/feeds/news/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/news/item_detail.html
@@ -2,10 +2,10 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-            <li><a href="{% url rss_index %}">
+            <li><a href="{% url news:index %}">
                 <img src="{{ STATIC_URL }}images/index-icons/rss-bc.png" alt="News"/>
             </a></li>
-            <li><a href="{% url rss_item_list item.feed.slug %}">
+            <li><a href="{% url news:item-list item.feed.slug %}">
                 &hellip;
             </a></li>
 {% endblock %}
