--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -1,4 +1,4 @@
-{% extends "podcasts/base.html" %}{% load molly_utils %}{% load molly_external_media %}{% load molly_podcasts %}
+{% extends "podcasts/base.html" %}{% load molly_utils %}{% load molly_external_media %}
 
 {% block breadcrumbs %}
 {{ block.super }}
@@ -57,7 +57,7 @@
       <li style="vertical-align:middle;">
         <a href="{{ enc.url }}?CAMEFROM=moxacuk" style="vertical-align:middle; font-size:11px">
         <img src="{{ STATIC_URL }}site/images/icons/list-{{ enc.medium }}.png" style="vertical-align:middle; margin:2px;" alt="({{ enc.medium }})"/>
-          {% if item.duration %}{{ item.duration|humanize_seconds }}, {% endif %}{{ enc.get_mimetype_display|capfirst }}, {{ enc.length|filesizeformat }}
+          {% if item.duration %}{{ item.duration|humanise_seconds }}, {% endif %}{{ enc.get_mimetype_display|capfirst }}, {{ enc.length|filesizeformat }}
           </a>
         </li>
     {% endfor %}
