--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -7,8 +7,11 @@
   <div class="header">
     <h2>{{ category.name }}</h2>
     Show:
-    <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a> 
-    <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a> 
+    {% comment %} the non-breaking spaces are to combat a bug in slimmer,
+		  where it is over zealous in removing the spaces
+		  between the a tags {% endcomment %}
+    <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a>&nbsp;
+    <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a>&nbsp;
     <a href="{% url podcasts:category category.slug %}">all</a>
   </div>
 		
