--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -12,3 +12,15 @@
 		<p>
 			Using this site may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
 </div></div></div>
+
+
+<div class="bubble pad-10">
+  <h2 style="color:#002147;">Cycle routing</h2>
+  <div>
+    <p>
+      Cycle routing is provided by <a href="http://www.cyclestreets.net">CycleStreets</a> 
+      using <a href="{% url %}">OpenStreetMap data</a>, which is licensed under
+      the Creative Commons Attribution-Share Alike (CC-BY-SA) 2.0 license.
+    </p>
+  </div>
+</div>
