--- a/molly/apps/places/templates/places/nearby_list.html
+++ b/molly/apps/places/templates/places/nearby_list.html
@@ -15,7 +15,7 @@
 	    <li><a href="{% url places:entity-nearby-detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">
 	{% else %}
 	    <li><a href="{% url places:nearby-detail entity_type.slug %}">
-	{% endif %} {{ entity_type.verbose_name_plural|capfirst }} <small>({{ entity_type.entities_found }} within {{ entity_type.max_distance|humanise_distance }})</small></a></li>{% endfor %}
+	{% endif %} {{ entity_type.verbose_name_plural|capfirst }} <small>({{ entity_type.entities_found }} within {{ entity_type.max_distance }})</small></a></li>{% endfor %}
 	</ul>
 </div>
 {% endfor %}
