Make a Google Analytics call on page change; fixes MOLLY-76

--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -133,7 +133,8 @@
  <script type="text/javascript">
  var _gaq = _gaq || [];
  _gaq.push(['_setAccount', '{{ google_analytics|safe }}']);
- _gaq.push(['_trackPageview']);
+ $(document).bind('molly-page-change', function(){
+ _gaq.push(['_trackPageview', current_url]);
  (function() {
    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
