Fix for MOLLY-125

--- a/molly/apps/feeds/templates/feeds/events/index.html
+++ b/molly/apps/feeds/templates/feeds/events/index.html
@@ -1,9 +1,35 @@
-{% extends "feeds/events/base.html" %}
+{% extends "feeds/events/base.html" %}{% load molly_search %}
 
 {% block content %}
 
+{# News Search #}
+{% search_form %}
+<form method="get" action="{% url search:index %}">
+    <!-- Doing the devil's work below: couldn't get a CSS design to work with Blackberry 8900 so using Tables as a last resort. Tim F -->
+<h2 class="invisible">Search News</h2>
+<table class="search"><tbody>
+        <tr><td>
+                <label style="display:none;" for="id_query">Search News Box</label>
+                {{ search_form.query }}
+        </td><td>
+                <input type="hidden" name="application" value="events" title="Search News" />
+                {% ifequal style_group "dumb" %}
+                    <button type="submit">Go!</button>
+                {% else %}
+                        <input type="image" src="{{ STATIC_URL }}site/images/buttons/search-button.png" title="Search" alt="Search"/>
+                {% endifequal %}
+        </td></tr><tr><td>
+                <p class="help-bubble top">Search for particular events</p>
+        </td><td></td></tr></tbody>
+</table>
+</form>
+{# End News Search #}
+
+
 <div class="section">
-    <h2>Feeds</h2>
+  <div class="header">
+        <h2>Feeds</h2>
+  </div>
     <ul class="link-list">
 {% for feed in feeds %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
