Fix transport page refreshing when Tube stations are included

--- a/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -10,7 +10,7 @@
     {% else %}
     <ul class="content-list no-round-bottom">
         {% if not entity.metadata.real_time_information.services %}
-            <li>Sorry, there is currently no bus time information for this stop.</li>
+            <li>Sorry, there is currently no real time information for this stop.</li>
         {% endif %}
     </ul>
     {% endif %}
